--- a/src/scss/section-content.scss
+++ b/src/scss/section-content.scss
@@ -18,15 +18,30 @@
 
     /* --------------------- slider swiper ↓ --------------------- */
 
-    &__slider {}
-    // Главный контейнер слайдера
-    .image-slider {
-        // Обязательная оболочка
-        &__wrapper {}
-        // Слайды
-        &__slide {}
-        &__image {
-            img {}
+    &__slider {
+        .swiper {
+            width: 600px;
+            height: 300px;
+        }
+
+        // Главный контейнер слайдера
+        .image-slider {
+            padding: 30px 0 70px 0;
+            // Обязательная оболочка
+            &__wrapper {
+            }
+
+            // Слайды
+            &__slide {
+            }
+
+            &__image {
+                text-align: center;
+
+                img {
+                    max-width: 100%;
+                }
+            }
         }
     }
 
