--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,6 +7,7 @@
 @import "section-content";
 @import "footer";
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap');
+//@import "../../node_modules/swiper/swiper-bundle.css";
 
 html, body {
     height: 100%;
