--- a/src/scss/section-content.scss
+++ b/src/scss/section-content.scss
@@ -23,11 +23,17 @@
             width: 600px;
             height: 300px;
         }
+
         .image-slider {
-            &__wrapper {}
-            &__slide {}
+            &__wrapper {
+            }
+
+            &__slide {
+            }
+
             &__image {
                 text-align: center;
+
                 img {
                     max-width: 100%;
                 }
