--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,6 +7,8 @@
 @import "section-content";
 @import "footer";
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap');
+//@import "../../node_modules/swiper/modules/navigation/navigation";
+//@import "../../node_modules/swiper/modules/pagination/pagination";
 
 html, body {
     height: 100%;
