--- a/src/scss/section-content.scss
+++ b/src/scss/section-content.scss
@@ -89,6 +89,7 @@
 
     &__info {
         flex: 0 1 58%;
+        padding-right: 30px;
     }
 
     &__image {
@@ -104,7 +105,7 @@
             line-height: 120.83%;
             position: absolute;
             top: 40px;
-            left: 30px;
+            left: 40px;
             z-index: 2;
         }
 
@@ -119,31 +120,5 @@
             bottom: -80px;
             right: -60px;
         }
-
-        /*&__chess {
-            position: absolute;
-            top: 0;
-            right: 0;
-
-            &_1 {
-                top: -150px;
-                right: 120px;
-            }
-
-            &_2 {
-                top: -300px;
-                right: 140px;
-            }
-
-            &_3 {
-                top: -300px;
-                right: 30px;
-            }
-
-            &_4 {
-                top: -160px;
-                right: -30px;
-            }
-        }*/
     }
 }
