--- a/src/scss/section-content.scss
+++ b/src/scss/section-content.scss
@@ -88,107 +88,40 @@
     }
 
     &__info {
-        flex: 0 1 58%;
-        padding-right: 60px;
+        flex: 0 1 50%;
+        padding-right: 30px;
     }
 
     &__image {
-        flex: 0 1 42%;
+        flex: 0 1 50%;
     }
 
     .image-content {
-        position: relative;
+        &__body {
+            position: relative;
+        }
 
-        span {
+        &__info {
             font-weight: 500;
             @include adaptiv-font(24, 14);
             line-height: 120.83%;
             position: absolute;
-            top: 40px;
-            left: 15px;
-            z-index: 2;
+            top: 39px;
+            left: 44px;
+            z-index: 1;
         }
 
         &__message {
             position: absolute;
             top: 0;
-            left: -30px;
+            left: 0;
         }
 
         &__owl {
             position: absolute;
-            bottom: -25px;
-            right: -36px;
+            top: 13px;
+            right: 0;
         }
     }
 }
 
-@media (max-width: 1350px) {
-    .content {
-        &__row {
-        }
-
-        &__info {
-            flex: 0 1 45%;
-        }
-
-        .image-content {
-            flex: 0 1 55%;
-
-            span {
-                top: 43px;
-                left: 40px;
-            }
-
-            &__message {
-                scale: .9;
-                right: 80px;
-            }
-
-            &__owl {
-                scale: .9;
-                bottom: -55px;
-                left: 320px;
-            }
-        }
-    }
-}
-
-@media (max-width: 960px) {
-    .content {
-        &__row {
-            flex-direction: column;
-            //position: relative;
-        }
-
-        &__info {
-            padding-right: 0;
-        }
-
-        .image-content {
-            //position: static;
-
-            span {
-                position: relative;
-                top: 0;
-                left: 0;
-            }
-
-            &__message {
-                scale: .8;
-                position: relative;
-                top: 0;
-                left: 0;
-                right: 0;
-                bottom: 0;
-            }
-
-            &__owl {
-                scale: .8;
-                position: relative;
-                top: 0;
-                left: 0;
-            }
-        }
-    }
-}
