--- a/src/scss/section-content.scss
+++ b/src/scss/section-content.scss
@@ -119,9 +119,50 @@
 
         &__owl {
             position: absolute;
-            top: 13px;
+            top: 30px;
             right: 0;
         }
     }
 }
 
+@media (max-width: 940px) {
+    .content {
+        &__row {
+            flex-direction: column;
+        }
+
+        &__info {
+        }
+
+        &__image {
+        }
+
+        .image-content {
+            display: flex;
+            justify-content: flex-end;
+
+            &__body {
+                height: 200px;
+                width: 100%;
+            }
+
+            &__info {
+                top: 0;
+                left: auto;
+                right: 260px;
+            }
+
+            &__message {
+                scale: .9;
+                top: -45px;
+                left: auto;
+                right: 180px;
+            }
+
+            &__owl {
+                top: 0;
+                scale: .9;
+            }
+        }
+    }
+}
