--- a/src/scss/section-content.scss
+++ b/src/scss/section-content.scss
@@ -131,12 +131,6 @@
             flex-direction: column;
         }
 
-        &__info {
-        }
-
-        &__image {
-        }
-
         .image-content {
             display: flex;
             justify-content: flex-end;
@@ -147,21 +141,88 @@
             }
 
             &__info {
-                top: 0;
+                top: -6px;
                 left: auto;
-                right: 260px;
+                right: 244px;
             }
 
             &__message {
-                scale: .9;
                 top: -45px;
                 left: auto;
-                right: 180px;
+                right: 185px;
+
+                img {
+                    width: 316px;
+                }
             }
 
             &__owl {
                 top: 0;
-                scale: .9;
+
+                img {
+                    width: 176px;
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 768px) {
+    .content {
+
+        .image-content {
+
+            &__info {
+                top: 73px;
+                right: 213px;
+            }
+
+            &__message {
+                top: 40px;
+                right: 160px;
+
+                img {
+                    width: 281px;
+                }
+            }
+
+            &__owl {
+                top: 85px;
+
+                img {
+                    width: 156px;
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 475px) {
+    .content {
+
+        .image-content {
+
+            &__info {
+                top: 70px;
+                left: 36px;
+                width: 100%;
+            }
+
+            &__message {
+                left: 0;
+
+                img {
+                    width: 246px;
+                }
+            }
+
+            &__owl {
+                top: 95px;
+                right: 0;
+
+                img {
+                    width: 137px;
+                }
             }
         }
     }
