--- a/src/scss/section-educator.scss
+++ b/src/scss/section-educator.scss
@@ -3,7 +3,76 @@
 .educator {
     background: #00093c;
     padding: 62px 0 92px 0;
-    &__body {
 
+    &__title {
+        @include adaptiv-font(36, 24);
+        font-weight: 700;
+        line-height: 122.22%;
+        color: #fff;
+        margin-bottom: 43px;
+    }
+
+    &__items {
+        display: flex;
+        margin: 0 -10px;
+    }
+
+    &__column {
+        flex: 0 1 25%;
+        padding: 0 10px;
+    }
+
+    &__item {
+    }
+
+    .item-educator {
+        background: #fff;
+        border-radius: 20px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 20px;
+
+        &__photo {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            position: relative;
+        }
+
+        &__elem {
+            width: 140px;
+            height: 140px;
+            background: url("../img/section-educator/svg/circle-teacher.svg") 0 0 no-repeat;
+        }
+
+        &__image {
+            width: 120px;
+            height: 120px;
+            border-radius: 50%;
+            overflow: hidden;
+            position: absolute;
+
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                object-position: center;
+            }
+        }
+
+        &__name {
+            @include adaptiv-font(18, 18);
+            font-weight: 700;
+            line-height: 122.22%;
+            margin: 25px 0 20px 0;
+        }
+
+        &__desc {
+            @include adaptiv-font(14, 14);
+            font-weight: 500;
+            line-height: 142.86%;
+            color: #4f4f4f;
+        }
     }
 }
