--- a/src/scss/section-educator.scss
+++ b/src/scss/section-educator.scss
@@ -30,6 +30,7 @@
         flex-direction: column;
         align-items: center;
         padding: 20px;
+        flex: 1 1 auto;
 
         &__photo {
             display: flex;
