--- a/src/scss/section-educator.scss
+++ b/src/scss/section-educator.scss
@@ -1,7 +1,18 @@
 @import "mixin";
 
+// Colors
+$bg-color: #00093c;
+$dot-color: #27aae1;
+
+// Dimensions
+$dot-size: 2px;
+$dot-space: 20px;
+
 .educator {
-    background: #00093c;
+    background: linear-gradient(90deg, $bg-color ($dot-space - $dot-size), transparent 1%) center,
+    linear-gradient($bg-color ($dot-space - $dot-size), transparent 1%) center,
+    $dot-color;
+    background-size: $dot-space $dot-space;
     padding: 62px 0 92px 0;
 
     &__title {
@@ -11,6 +22,10 @@
         color: #fff;
         margin-bottom: 43px;
         text-align: center;
+        background: #00093c;
+        max-width: 540px;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     &__body {
