--- a/src/scss/section-faq.scss
+++ b/src/scss/section-faq.scss
@@ -33,12 +33,12 @@
 
         &.active {
             .faq__answer {
-                height: auto;
+                display: block;
             }
 
             .faq__question::before {
                 transform: rotate(45deg);
-                transition: all 0.3s ease 0s;
+                transition: all .3s ease 0s;
             }
         }
     }
@@ -63,8 +63,7 @@
     &__answer {
         line-height: 185.71%;
         max-width: 979px;
-        height: 0;
-        overflow: hidden;
+        display: none;
     }
 
     &__gradient {
