--- a/src/scss/section-faq.scss
+++ b/src/scss/section-faq.scss
@@ -11,36 +11,17 @@
         margin-bottom: 31px;
     }
 
-    &__body {
-        position: relative;
-    }
-
     &__block {
         position: relative;
-
-        &:not(:last-child) {
-            margin-bottom: 20px;
-        }
     }
 
-    &__content {
-        padding: 20px 30px;
+    &__item {
+        margin-bottom: 20px;
         background: #fff;
         border-radius: 6px;
+        //padding: 20px 30px;
         position: relative;
         z-index: 1;
-        cursor: pointer;
-
-        &.active {
-            .faq__answer {
-                display: block;
-            }
-
-            .faq__question::before {
-                transform: rotate(45deg);
-                transition: all .3s ease 0s;
-            }
-        }
     }
 
     &__question {
@@ -48,25 +29,32 @@
         @include adaptiv-font(18, 18);
         line-height: 188.89%;
         position: relative;
+        cursor: pointer;
+        padding: 20px 30px;
+
+        &.active + .faq__answer {
+            display: block;
+        }
 
         &::before {
             content: '';
-            background: url("../img/section-faq/svg/plus.svg") 0 0 no-repeat;
             width: 17px;
             height: 17px;
+            background: url("../img/section-faq/svg/plus.svg") 0 0 no-repeat;
             position: absolute;
-            top: 10px;
+            top: 28.42px;
             right: 30px;
         }
     }
 
     &__answer {
         line-height: 185.71%;
-        max-width: 979px;
+        max-width: 980px;
+        padding: 0 0 20px 30px;
         display: none;
     }
 
-    &__gradient {
+    /*&__gradient {
         width: 100%;
         height: 100%;
         background: linear-gradient(90deg, #f7941d 0%, #27aae1 100%);
@@ -76,7 +64,7 @@
         position: absolute;
         top: 0;
         left: 0;
-    }
+    }*/
 
     &__elements {
         position: absolute;
