--- a/src/scss/section-faq.scss
+++ b/src/scss/section-faq.scss
@@ -17,11 +17,20 @@
 
     &__item {
         margin-bottom: 20px;
-        background: #fff;
-        border-radius: 6px;
-        //padding: 20px 30px;
         position: relative;
         z-index: 1;
+    }
+
+    &__content {
+        background: #fff;
+        border-radius: 6px;
+        position: relative;
+        z-index: 1;
+
+        &.opened + .faq__gradient {
+            top: 10px;
+            left: 10px;
+        }
     }
 
     &__question {
@@ -49,12 +58,12 @@
 
     &__answer {
         line-height: 185.71%;
-        max-width: 980px;
-        padding: 0 0 20px 30px;
+        max-width: 1010px;
+        padding: 0 30px 20px 30px;
         display: none;
     }
 
-    /*&__gradient {
+    &__gradient {
         width: 100%;
         height: 100%;
         background: linear-gradient(90deg, #f7941d 0%, #27aae1 100%);
@@ -64,7 +73,7 @@
         position: absolute;
         top: 0;
         left: 0;
-    }*/
+    }
 
     &__elements {
         position: absolute;
