--- a/src/scss/section-faq.scss
+++ b/src/scss/section-faq.scss
@@ -30,11 +30,11 @@
 
     &__question {
         font-weight: 500;
-        @include adaptiv-font(18, 18);
+        @include adaptiv-font(18, 16);
         line-height: 188.89%;
         position: relative;
         cursor: pointer;
-        padding: 20px 30px;
+        padding: 20px 60px 20px 30px;
 
         &::before {
             content: '';
@@ -51,6 +51,7 @@
             max-height: 300px;
             padding-bottom: 20px;
             transition: all .3s ease 0s;
+            overflow-y: scroll;
         }
 
         &.active::before {
