--- a/src/scss/section-form.scss
+++ b/src/scss/section-form.scss
@@ -2,7 +2,6 @@
 
 .form-section {
     background: #f6f7f9;
-    //padding-bottom: 50px;
     &__wrapper {
         background: #fff;
         border-radius: 20px;
@@ -30,6 +29,7 @@
     }
     &__right {
         flex: 1 1 auto;
+        padding-left: 50px;
     }
     &__image {
         background: url("../img/section-form/svg/message.svg") 0 0 no-repeat;
