--- a/src/scss/section-form.scss
+++ b/src/scss/section-form.scss
@@ -19,12 +19,12 @@
         position: relative;
         &::before {
             content: '';
-            background: url("../img/section-form/owl.png") 0 0 no-repeat;
-            width: 277px;
-            height: 312px;
+            background: url("../img/svg/owl.svg") 0 0 no-repeat;
+            width: 100%;
+            height: 292px;
             position: absolute;
-            top: -15px;
-            left: -90px;
+            top: -8px;
+            left: -95px;
         }
     }
     &__right {
