--- a/src/scss/section-form.scss
+++ b/src/scss/section-form.scss
@@ -30,6 +30,8 @@
     &__right {
         flex: 1 1 auto;
         padding-left: 50px;
+        display: flex;
+        align-items: center;
     }
     &__image {
         background: url("../img/section-form/svg/message.svg") 0 0 no-repeat;
@@ -64,17 +66,44 @@
         flex-wrap: wrap;
     }
     &__item {
+        //line-height: 121.43%;
+        color: #4f4f4f;
         &:not(:first-child) {
             flex: 0 1 50%;
         }
         &:first-child {
             flex: 0 1 100%;
         }
+        &:nth-child(-n+3) {
+            margin-bottom: 20px;
+        }
+    }
+    &__label {
+        /*background: rgba(0, 9, 60, 0.1);
+        border-radius: 6px;
+        display: block;
+        padding: 16px 19px;*/
+    }
+    &__input {
+        background: rgba(0, 9, 60, 0.1);
+        border-radius: 6px;
+        display: block;
+        padding: 16px 19px;
+        width: 100%;
     }
     &__info {
         flex: 0 1 50%;
+        @include adaptiv-font(10, 10);
+        //line-height: 140%;
+        color: #4f4f4f;
     }
     &__button {
         flex: 0 1 50%;
+        font-weight: 700;
+        //line-height: 185.71%;
+        color: #fff;
+        background: #f7941d;
+        border-radius: 10px;
+        padding: 12px 15px;
     }
 }
