--- a/src/scss/section-form.scss
+++ b/src/scss/section-form.scss
@@ -2,6 +2,7 @@
 
 .form-section {
     background: #f6f7f9;
+
     &__wrapper {
         background: #fff;
         border-radius: 20px;
@@ -9,14 +10,17 @@
         position: relative;
         bottom: -40px;
     }
+
     &__body {
         display: flex;
     }
+
     &__left {
         flex: 0 0 611px;
         display: flex;
         justify-content: flex-end;
         position: relative;
+
         &::before {
             content: '';
             background: url("../img/svg/owl.svg") 0 0 no-repeat;
@@ -27,12 +31,14 @@
             left: -95px;
         }
     }
+
     &__right {
         flex: 1 1 auto;
         padding-left: 50px;
         display: flex;
         align-items: center;
     }
+
     &__image {
         background: url("../img/section-form/svg/message.svg") 0 0 no-repeat;
         width: 420px;
@@ -41,15 +47,20 @@
         justify-content: center;
         align-items: center;
     }
-    &__image-text {}
+
+    &__image-text {
+    }
+
     .image-text {
         padding: 0 15px 0 50px;
+
         &__title {
             font-weight: 600;
             @include adaptiv-font(24, 24);
             line-height: 120.83%;
             margin-bottom: 20px;
         }
+
         &__subtitle {
             font-weight: 500;
             @include adaptiv-font(16, 16);
@@ -64,26 +75,32 @@
     &__body {
         display: flex;
         flex-wrap: wrap;
+        margin: 0 -10px;
+
+        & > div {
+            padding: 0 10px;
+        }
     }
+
     &__item {
-        //line-height: 121.43%;
         color: #4f4f4f;
+
         &:not(:first-child) {
             flex: 0 1 50%;
         }
+
         &:first-child {
             flex: 0 1 100%;
         }
+
         &:nth-child(-n+3) {
             margin-bottom: 20px;
         }
     }
+
     &__label {
-        /*background: rgba(0, 9, 60, 0.1);
-        border-radius: 6px;
-        display: block;
-        padding: 16px 19px;*/
     }
+
     &__input {
         background: rgba(0, 9, 60, 0.1);
         border-radius: 6px;
@@ -91,19 +108,24 @@
         padding: 16px 19px;
         width: 100%;
     }
+
     &__info {
         flex: 0 1 50%;
         @include adaptiv-font(10, 10);
-        //line-height: 140%;
         color: #4f4f4f;
+        line-height: 140%;
     }
-    &__button {
+
+    &__button-wrapper {
         flex: 0 1 50%;
+    }
+
+    &__button {
         font-weight: 700;
-        //line-height: 185.71%;
         color: #fff;
         background: #f7941d;
         border-radius: 10px;
         padding: 12px 15px;
+        width: 100%;
     }
 }
